--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,18 @@
-<!--The whole content below can be removed with the new code.-->
 <div class="container">
-  <div class="jumbotron">
-    <h1 class="text-center">{{title}}</h1>
+  <div class="jumbotron" style="background-color: #FF9A00;">
+    <h1 class="text-center" style="color: #FFFFFF">{{title}}</h1>
   </div>
 
   <app-sensor-selector></app-sensor-selector>
-  <chart-energy></chart-energy>
+  <br>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+          <chart-energy></chart-energy>
+      </div>
+      <div class="col-md-6">
+          <chart-price></chart-price>
+      </div>
+    </div>
+  </div>
 </div>
